--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/menu.css">
+    <link rel="stylesheet" href="../css/contacts.css">
+
     <link href="https://fonts.googleapis.com/css?family=Bad+Script|Roboto+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Source+Sans+Pro&display=swap" rel="stylesheet">
+   
     <title>myPersonalPage.com</title>
 </head>
 
@@ -11,15 +18,26 @@
     <div class="header">
         <img class="menu" src="../img/menu.svg" alt="menu">
         <div class="contacts">
-            <img class="contact" src="../img/phone-call.svg" alt="phone">
-            <img class="contact" src="../img/email.svg" alt="email">
-            <img class="contact" src="../img/facebook.svg" alt="facebook">
+            <img class="contact phone" src="../img/phone-call.svg" alt="phone">            
+            <img class="contact email" src="../img/email.svg" alt="email">
+            <a href="https://www.facebook.com/"><img class="contact facebook" src="../img/facebook.svg" alt="facebook"></a>
+            <div class="phoneBlock"> 8 900 500 34 12 </div>
+            <div class="emailBlock"> natalia@mail.ru </div>            
         </div>
     </div>
 
-    <div class="avatar"></div>
+    <div class="block">
+        <center>
+            <p class="logo">Natalia Petrova</p>
+            <button class="button" >курсы</button>
+            <button class="button" >вебинары</button>
+            <button class="button" >отзывы</button>
+            <button class="button" >обо мне</button>
+        </center>
+    </div>    
 
     <center>
+    <div class="avatar"></div>
     <div class="text">
            <p id="text1">Приветствую вас на моей странице! </p>
            <p id="text2">Меня зовут Наталья! Я врач-диетолог. Вы можете
@@ -30,5 +48,7 @@
     <div class="website">
         <a href="index.html"> myPersonalPage.com</a>       
     </div>
+
+    <script src="./js/myJS.js"></script>
 </body>
 
